@@ -23,10 +23,13 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import java.time.LocalDateTime;
 import java.time.chrono.ChronoLocalDate;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
+
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @Sql(scripts = "/sqlFiles/bigOrderTableRepository/insert.sql", executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
 @Sql(scripts = "/sqlFiles/bigOrderTableRepository/delete.sql", executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
@@ -85,13 +88,13 @@ class BigOrderTableRepositoryTest extends IntegrationTestBase {
         var expectedValue = ModelUtils.getAllBOTViewsDESC().stream()
             .sorted(Comparator.comparing(BigOrderTableViews::getOrderPaymentStatus).reversed())
             .map(BigOrderTableViews::getOrderPaymentStatus)
-            .collect(Collectors.toList());
+            .toList();
         var actualValue =
             bigOrderTableRepository.findAll(page, DEFAULT_ORDER_SEARCH_CRITERIA, TARIFFS_ID_LIST, USER_LANGUAGE_ENG)
                 .getContent()
                 .stream()
                 .map(BigOrderTableViews::getOrderPaymentStatus)
-                .collect(Collectors.toList());
+                .toList();
         Assertions.assertEquals(expectedValue, actualValue);
     }
 
@@ -136,9 +139,10 @@ class BigOrderTableRepositoryTest extends IntegrationTestBase {
         var expectedValue = ModelUtils.getAllBOTViewsDESC().stream()
             .filter(order -> order.getOrderPaymentStatus().equals(OrderPaymentStatus.PAID.name()))
             .collect(Collectors.toList());
-        var actualValue = bigOrderTableRepository
-            .findAll(ORDER_PAGE_PAGE_NUMBER_0_PAGE_SIZE_12_DESC, filter, TARIFFS_ID_LIST, USER_LANGUAGE_ENG)
-            .getContent();
+        var actualValue =
+            bigOrderTableRepository
+                .findAll(ORDER_PAGE_PAGE_NUMBER_0_PAGE_SIZE_12_DESC, filter, TARIFFS_ID_LIST, USER_LANGUAGE_ENG)
+                .getContent();
         Assertions.assertEquals(expectedValue, actualValue);
     }
 
@@ -171,10 +175,10 @@ class BigOrderTableRepositoryTest extends IntegrationTestBase {
         var filter = new OrderSearchCriteria().setDistricts(new String[] {"Подільський"});
         var expectedValue = ModelUtils.getAllBOTViewsDESC().stream()
             .map(BigOrderTableViews::getDistrict)
-            .filter(district -> district.equals("Подільський")).collect(Collectors.toList());
+            .filter(district -> district.equals("Подільський")).toList();
         var actualValue = bigOrderTableRepository
             .findAll(ORDER_PAGE_PAGE_NUMBER_0_PAGE_SIZE_12_DESC, filter, TARIFFS_ID_LIST, USER_LANGUAGE_ENG)
-            .getContent().stream().map(BigOrderTableViews::getDistrict).collect(Collectors.toList());
+            .getContent().stream().map(BigOrderTableViews::getDistrict).toList();
         Assertions.assertEquals(
             expectedValue, actualValue);
     }
@@ -338,7 +342,7 @@ class BigOrderTableRepositoryTest extends IntegrationTestBase {
             DEFAULT_ORDER_SEARCH_CRITERIA, TARIFFS_ID_LIST, USER_LANGUAGE_UA).getContent();
         boolean isListCorrectlySorted =
             Comparators.isInOrder(bigOrderTableViewsList, orderStatusTranslationComparator(false));
-        Assertions.assertTrue(isListCorrectlySorted);
+        assertTrue(isListCorrectlySorted);
     }
 
     @Test
@@ -349,7 +353,7 @@ class BigOrderTableRepositoryTest extends IntegrationTestBase {
             DEFAULT_ORDER_SEARCH_CRITERIA, TARIFFS_ID_LIST, USER_LANGUAGE_UA).getContent();
         boolean isListCorrectlySorted =
             Comparators.isInOrder(bigOrderTableViewsList, orderStatusTranslationComparator(true));
-        Assertions.assertTrue(isListCorrectlySorted);
+        assertTrue(isListCorrectlySorted);
     }
 
     @Test
@@ -437,6 +441,15 @@ class BigOrderTableRepositoryTest extends IntegrationTestBase {
     }
 
     @Test
+    void get_All_Orders_PageImpl_Number_Of_Elements_ASC() {
+        var expectedValue = ModelUtils.getPageableAllBOTViews_Two_Element_On_Page_ASC().getNumberOfElements();
+        var actualValue =
+            bigOrderTableRepository.findAll(ORDER_PAGE_PAGE_NUMBER_3_PAGE_SIZE_2_ASC, DEFAULT_ORDER_SEARCH_CRITERIA,
+                TARIFFS_ID_LIST, USER_LANGUAGE_ENG).getNumberOfElements();
+        Assertions.assertEquals(expectedValue, actualValue);
+    }
+
+    @Test
     void get_All_Orders_Sort_By_OrderPaymentStatus_UA_Localization_ASC() {
         OrderPage orderPage = new OrderPage().setPageNumber(0).setPageSize(15).setSortBy("orderPaymentStatus")
             .setSortDirection(Sort.Direction.ASC);
@@ -444,7 +457,7 @@ class BigOrderTableRepositoryTest extends IntegrationTestBase {
             DEFAULT_ORDER_SEARCH_CRITERIA, TARIFFS_ID_LIST, USER_LANGUAGE_UA).getContent();
         boolean isListCorrectlySorted =
             Comparators.isInOrder(bigOrderTableViewsList, orderPaymentStatusTranslationComparator(false));
-        Assertions.assertTrue(isListCorrectlySorted);
+        assertTrue(isListCorrectlySorted);
     }
 
     @Test
@@ -455,16 +468,32 @@ class BigOrderTableRepositoryTest extends IntegrationTestBase {
             DEFAULT_ORDER_SEARCH_CRITERIA, TARIFFS_ID_LIST, USER_LANGUAGE_UA).getContent();
         boolean isListCorrectlySorted =
             Comparators.isInOrder(bigOrderTableViewsList, orderPaymentStatusTranslationComparator(true));
-        Assertions.assertTrue(isListCorrectlySorted);
+        assertTrue(isListCorrectlySorted);
     }
 
     @Test
-    void get_All_Orders_PageImpl_Number_Of_Elements_ASC() {
-        var expectedValue = ModelUtils.getPageableAllBOTViews_Two_Element_On_Page_ASC().getNumberOfElements();
+    void get_All_Orders_Filter_By_RegionId_And_CityId_And_DistrictId() {
+        var filter =
+            new OrderSearchCriteria().setCityId(new Long[] {100L}).setDistrictId(new Long[] {100L})
+                .setRegionId(new Long[] {100L});
+        var expectedValue = ModelUtils.getAllBOTViewsDESC().stream()
+            .filter(a -> Arrays.asList(filter.getCityId()).contains(a.getCityId()))
+            .filter(a -> Arrays.asList(filter.getDistrictId()).contains(a.getDistrictId()))
+            .filter(a -> Arrays.asList(filter.getRegionId()).contains(a.getRegionId()))
+            .collect(Collectors.toList());
         var actualValue =
-            bigOrderTableRepository.findAll(ORDER_PAGE_PAGE_NUMBER_3_PAGE_SIZE_2_ASC, DEFAULT_ORDER_SEARCH_CRITERIA,
-                TARIFFS_ID_LIST, USER_LANGUAGE_ENG).getNumberOfElements();
+            bigOrderTableRepository.findAll(DEFAULT_ORDER_PAGE_DESC, filter, TARIFFS_ID_LIST, USER_LANGUAGE_ENG)
+                .getContent();
         Assertions.assertEquals(expectedValue, actualValue);
+    }
+
+    @Test
+    void getOrdersCountByTariffsTest() {
+        List<Long> tariffsInfoIds = List.of(1L, 2L, 3L);
+
+        long result = bigOrderTableRepository.getOrdersCountByTariffs(tariffsInfoIds);
+
+        assertTrue(result > 0);
     }
 
     private Comparator<BigOrderTableViews> orderStatusTranslationComparator(boolean descending) {
